syntax = "proto3";

package scuffle.video.v1.types;

import "scuffle/video/v1/types/ulid.proto";
import "scuffle/video/v1/types/room_status.proto";
import "scuffle/video/v1/types/video_config.proto";
import "scuffle/video/v1/types/audio_config.proto";

// A room is a container for a live stream. It contains information about the
// stream, such as the stream key, the transcoding and recording configurations
// to use, and when the stream was last live or ended.
message Room {
  // The name of the room.
  Ulid id = 1;

  // The name of the transcoding configuration to use for the room.
  optional Ulid transcoding_config_id = 2;

  // The name of the recording configuration to use for the room.
  optional Ulid recording_config_id = 3;

  // The room status
  RoomStatus status = 4;
  
  // Whether or not the room is currently private.
  bool private = 5;

  // The stream key for the room.
  string stream_key = 6;

  // The video input of the room session.
  // This is reported by the ingest server.
  optional VideoConfig video_input = 7;
  // The audio input of the room session.
  // This is reported by the ingest server.
  optional AudioConfig audio_input = 8;

  // The video outputs of the room session.
  // This is reported by the transcode server.
  repeated VideoConfig video_output = 9;

  // The audio outputs of the room session.
  // This is reported by the transcode server.
  repeated AudioConfig audio_output = 10;

  // The current connection id of the room session.
  optional Ulid active_connection_id = 11;

  // The current recording id of the room session.
  optional Ulid active_recording_id = 12;

  // The time the room was created.
  // This is a Unix timestamp in nanoseconds.
  int64 created_at = 13;

  // The time the room was last updated.
  // This is a Unix timestamp in nanoseconds.
  int64 updated_at = 14;

  // The time the room was last live.
  // This is a Unix timestamp in nanoseconds.
  optional int64 last_live_at = 15;

  // The time the room was last ended.
  // This is a Unix timestamp in nanoseconds.
  optional int64 last_disconnected_at = 16;

  // The tags associated with the room.
  map<string, string> tags = 17;
}
